--- a/app/package.json
+++ b/app/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "electron-boilerplate",
-  "productName": "Electron Boilerplate",
-  "description": "Starter for your Electron application. Out of the box ready for serious stuff.",
+  "name": "flow-text",
+  "productName": "Flux Text",
+  "description": "Simple and smart plain text editor.",
   "version": "0.1.0",
-  "author": "Mr Gumby",
-  "copyright": "© 2016, your company here",
+  "author": "Giovanni Mansueto",
+  "copyright": "© 2016, G-Web TI",
   "main": "background.js",
   "dependencies": {
     "fs-jetpack": "^0.9.0"
